pkg/lang/testdata/ub/constraints/valid/check-predicate-chained-for-each-map-level.ub
constraints: [
  {
    kind: predicate
    @for-each: [
      { @env: input.envs },
      { @s:   @env.value.subnets }
    ]
    when:    true
    require: @s.value.az == 'set'
    message: 'subnet needs an az'
  },
]
