pkg/lang/testdata/ub/constraints/invalid/for-each-two-keys.ub
constraints: [
  {
    kind: predicate
    @for-each: [ { @a: input.rules, @b: input.rules }, ]
    when:    true
    require: true
  },
]
